--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,110 @@
-.App {
-  text-align: center;
+*
+{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Indie Flower', cursive;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header
+{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 1em;
+  background-color: aqua;
+  font-weight: bold;
+  font-size: 2.2rem;
+  border-bottom: 1px solid black;
+}
+
+.label
+{
+  text-align: center;
+  font-size: 2.1rem;
+  padding: 0.2em;
+}
+
+.form-group
+{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.input, .textarea
+{
+  max-width: 100%;
+  width: 280px;
+  align-self: center;
+  font-size: 1.2rem;
+  padding: 1em;
+  resize: none;
+}
+
+.input:focus, .textarea:focus
+{
+  border: 1px dotted darkblue;
+  font-weight: bold;
+}
+
+.word-counter
+{
+  font-size: 1.7rem;
+  color: darkgrey;
+  font-weight: bold;
+  align-self: center;
+  line-height: 0.9;
+}
+
+.btn
+{
+  max-width: 100%;
+  padding: 1em;
+  align-self: center;
+  background-color: darkgreen;
+  font-size: 1.5rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.grid-output
+{
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.footer
+{
+  display: block;
+  text-align: center;
+  padding: 1em;
+  background-color: aqua;
+  font-weight: bold;
+  font-size: 2.2rem;
+  border-top: 1px solid black;
+}
+
+.footer > a
+{
+  color: inherit;
+  padding-left: 0.3em;
+}
+
+@media(max-width:768px) 
+{
+  .grid-output 
+  {
+      grid-template-columns: 1fr;
+      justify-items: center;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media(min-width:768px) and (max-width:1024px) 
+{
+  .grid-output 
+  {
+      grid-template-columns: repeat(2, 1fr);
+      justify-items: center;
   }
 }
